--- a/CIB_PaymentGateway/DAL/DAL.vbproj
+++ b/CIB_PaymentGateway/DAL/DAL.vbproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsDAL.vb" />
+    <Compile Include="DataAccess.vb.vb" />
     <Compile Include="Properties\AssemblyInfo.vb" />
   </ItemGroup>
   <ItemGroup>
